--- a/01-dom_tasklist/index.html
+++ b/01-dom_tasklist/index.html
@@ -20,7 +20,7 @@
       <div class="col s12">
         <div id="main" class="card-panel grey darken-4 white-text">
           <div class="card-content">
-            <span class="card-title">Task List</span>
+            <h5 id="task-title">Task List</h5>
             <div class="row">
               <form id="task-form">
                 <div class="input-field col s12">
