--- a/02-loancalculator/index.html
+++ b/02-loancalculator/index.html
@@ -9,6 +9,11 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
   integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
   <title>Loan Calculator</title>
+  <style>
+    #loading, #results {
+      display: none;
+    }
+  </style>
 </head>
 
 <body class="bg-dark">
@@ -43,9 +48,9 @@
           </form>
 
           <!-- Loader -->
-          <!-- <div id="loading">
+          <div id="loading">
             <img src="img/loading.gif" alt="">
-          </div> -->
+          </div>
           <!-- RESULTS -->
           <div id="results" class="pt-4">
             <h5>Results</h5>
