--- a/05-easyhttp/index.html
+++ b/05-easyhttp/index.html
@@ -7,6 +7,7 @@
     <title>Easyhttp Library</title>
   </head>
   <body>
+    <h1>Easyhttp: RESTApi library using ajax and es5</h1>
     <script src="easyhttp.js"></script>
     <script src="script.js"></script>
   </body>
