--- a/06-easyhttp2/index.html
+++ b/06-easyhttp2/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charse="UTF-8" />
     <meta name="width" content="width=device-width, initial-scale=1.0" />
-    <title>EasyHttp2: Http library Using ES6, Fetch and Library.</title>
+    <title>EasyHttp2: Http library Using ES6, Fetch and Promises.</title>
   </head>
   <body>
     <h1>EasyHttp2: Http library Using ES6, Fetch and Library.</h1>
