get profile request

--- a/08-githubsearch/index.html
+++ b/08-githubsearch/index.html
@@ -30,7 +30,7 @@
           placeholder="GitHub Username...."
         />
         <br />
-        <div id="profilr"></div>
+        <div id="profile"></div>
       </div>
     </div>
 
