--- a/08-githubsearch/index.html
+++ b/08-githubsearch/index.html
@@ -52,6 +52,6 @@
     crossorigin="anonymous"
   ></script>
   <script src="github.js"></script>
-  <script src="uil.js"></script>
+  <script src="ui.js"></script>
   <script src="app.js"></script>
 </html>
